--- a/article/article01.html
+++ b/article/article01.html
@@ -149,7 +149,7 @@
 					今天我們將重點談論需要⾔語治療協助的孩⼦。簡單來說，如果你的孩⼦有以下四⼤類的需
 					要，⾔語治療師都能為你提供協助。<br><br>
 
-					<h3>第⼀類：語⾔問題</h3>
+					<h3><b>第⼀類：語⾔問題</b></h3>
 					語⾔能⼒可分為理解能⼒和表達能⼒兩⼤範疇。<br>
 					理解能⼒就是能不能聽懂別⼈說話的內容，表達能⼒就是能不能清晰說出⾃⼰的想法。<br><br>
 					語⾔障礙常⾒的問題包括（與同齡⼩孩相較）：<br>
@@ -161,7 +161,7 @@
 						<li>組織能⼒弱，未能清楚敘述事情</li>
 					</ul>
 					<br>
-					<h3>第⼆類：⾔語問題</h3>
+					<h3><b>第⼆類：⾔語問題</b></h3>
 					⾔語障礙可分為以下三類。<br><br>
 
 					<b><u>發⾳問題</u></b><br>
@@ -176,7 +176,7 @@
 					這就是我們平時說的⼜吃、⼜窒窒、漏⼜。常⾒的臨床表現包括重複字詞，不適當地延長語
 					⾳或在句⼦中間停頓。<br><br>
 
-					<h3>第三類：社交溝通問題</h3>
+					<h3><b>第三類：社交溝通問題</b></h3>
 					語⾔能⼒除了理解能⼒和表達能⼒，還有我們所說的「語⽤」，即是運⽤語⾔的能⼒。這就
 					關係到社交溝通層⾯。<br><br>
 
@@ -190,7 +190,7 @@
 					說到這裡可能你也會想到⾃閉症的孩⼦，的⽽且確社交溝通是⾃閉症孩⼦會遇到明顯困難的
 					範疇，⾔語治療師會透過適當的社交技巧訓練協助孩⼦處理社交問題。<br><br>
 
-					<h3>第四類：⼜肌及吞嚥問題</h3>
+					<h3><b>第四類：⼜肌及吞嚥問題</b></h3>
 					⼜肌即⼜部肌⾁，下巴、嘴唇及⾆頭都是其中重要組成部份，主要負責的功能除了說話，還
 					有進食。<br><br>
 
@@ -200,7 +200,7 @@
 					後天因素引起(例如：受⽗母等家庭成員的習慣影響)。⾔語治療師會透過吞嚥訓練及調節餐
 					類等等的⽅法幫助孩⼦安全進食。<br><br>
 
-					<h3>總結</h3>
+					<h3><b>總結</b></h3>
 					這篇⽂章簡介⾔語治療的範疇，並不包括所有⾔語治療師會處理的問題。同時，要知道每個
 					孩⼦的情況都獨⼀無⼆，如果你對孩⼦的發展有懷疑或擔⼼的地⽅，盡快帶孩⼦找⾔語治療
 					師作詳細評估吧！有需要幫忙的話，必定是愈早發現，愈早開始針對性跟進對孩⼦成長最
