--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
 					<div class="card">
 						<div class="image-container">
 							<a href="article/article01.html">
-							<img src="images/Article/article001.png" alt="Card image">
-							<div class="line"></div>
+								<img src="images/Article/article001.png" alt="Card image">
+								<div class="line"></div>
 						</div>
 						<div class="card-body">
 							<h5 class="card-title">⾔語治療是甚麼? 我的孩⼦需要嗎?</h5>
@@ -233,24 +233,23 @@
 				<div class="col-md-4">
 					<div class="card">
 						<iframe src="https://www.facebook.com/plugins/likebox.php?href=
-				https%3A%2F%2Fwww.facebook.com%2fprowayspeechtherapy&width=400&
+				https%3A%2F%2Fwww.facebook.com%2fprowayspeechtherapy&width=358&
 				colorscheme=light&show_faces=true&border_color&
 				stream=true&header=true&height=435" scrolling="yes" frameborder="0" style="border:none; overflow:hidden;
 				width:395px; height:385px; background: white;
 				float:left; " allowTransparency="true">
-					</iframe>
+						</iframe>
 					</div>
 				</div>
 				<!-- Repeat this block for each card -->
-				<!-- Repeat this block for each card -->
 				<div class="col-md-4">
 					<div class="card">
-						<div>
+						<div style="display: flex; justify-content: center;">
 							<blockquote class="instagram-media"
 								data-instgrm-permalink="https://www.instagram.com/prowayspeechtherapy/?utm_source=ig_embed&amp;utm_campaign=loading"
 								data-instgrm-version="14"
-								style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:400px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-								<div style="padding:16px;"> <a
+								style="background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-height:375px; max-width:100px; min-width:100px; padding: 1px; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+								<div style="padding: 8px;"> <a
 										href="https://www.instagram.com/prowayspeechtherapy/?utm_source=ig_embed&amp;utm_campaign=loading"
 										style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;"
 										target="_blank">
@@ -258,7 +257,8 @@
 											<div
 												style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;">
 											</div>
-											<div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
+											<div
+												style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
 												<div
 													style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;">
 												</div>
@@ -267,9 +267,10 @@
 												</div>
 											</div>
 										</div>
-										<div style="padding: 19% 0;"></div>
-										<div style="display:block; height:50px; margin:0 auto 12px; width:50px;"><svg width="50px"
-												height="50px" viewBox="0 0 60 60" version="1.1" xmlns="https://www.w3.org/2000/svg"
+										<div style="padding: 10% 0;"></div>
+										<div style="display:block; height:50px; margin:0 auto 12px; width:50px;"><svg
+												width="50px" height="50px" viewBox="0 0 60 60" version="1.1"
+												xmlns="https://www.w3.org/2000/svg"
 												xmlns:xlink="https://www.w3.org/1999/xlink">
 												<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 													<g transform="translate(-511.000000, -20.000000)" fill="#000000">
@@ -281,13 +282,14 @@
 													</g>
 												</g>
 											</svg></div>
-										<div style="padding-top: 8px;">
+										<div style="padding-top: 3px;">
 											<div
-												style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;">
+												style="color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;">
 												View this profile on Instagram</div>
 										</div>
-										<div style="padding: 12.5% 0;"></div>
-										<div style="display: flex; flex-direction: row; margin-bottom: 14px; align-items: center;">
+										<div style="padding: 8% 0;"></div>
+										<div
+											style="display: flex; flex-direction: row; margin-bottom: 14px; align-items: center;">
 											<div>
 												<div
 													style="background-color: #F4F4F4; border-radius: 50%; height: 12.5px; width: 12.5px; transform: translateX(0px) translateY(7px);">
@@ -301,41 +303,41 @@
 											</div>
 											<div style="margin-left: 8px;">
 												<div
-													style=" background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 20px; width: 20px;">
+													style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 20px; width: 20px;">
 												</div>
 												<div
-													style=" width: 0; height: 0; border-top: 2px solid transparent; border-left: 6px solid #f4f4f4; border-bottom: 2px solid transparent; transform: translateX(16px) translateY(-4px) rotate(30deg)">
+													style="width: 0; height: 0; border-top: 2px solid transparent; border-left: 6px solid #f4f4f4; border-bottom: 2px solid transparent; transform: translateX(16px) translateY(-4px) rotate(30deg)">
 												</div>
 											</div>
 											<div style="margin-left: auto;">
 												<div
-													style=" width: 0px; border-top: 8px solid #F4F4F4; border-right: 8px solid transparent; transform: translateY(16px);">
+													style="width: 0px; border-top: 8px solid #F4F4F4; border-right: 8px solid transparent; transform: translateY(16px);">
 												</div>
 												<div
-													style=" background-color: #F4F4F4; flex-grow: 0; height: 12px; width: 16px; transform: translateY(-4px);">
+													style="background-color: #F4F4F4; flex-grow: 0; height: 12px; width: 16px; transform: translateY(-4px);">
 												</div>
 												<div
-													style=" width: 0; height: 0; border-top: 8px solid #F4F4F4; border-left: 8px solid transparent; transform: translateY(-4px) translateX(8px);">
+													style="width: 0; height: 0; border-top: 8px solid #F4F4F4; border-left: 8px solid transparent; transform: translateY(-4px) translateX(8px);">
 												</div>
 											</div>
 										</div>
 										<div
 											style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center; margin-bottom: 24px;">
 											<div
-												style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 224px;">
+												style="background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 224px;">
 											</div>
 											<div
-												style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 144px;">
+												style="background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 144px;">
 											</div>
 										</div>
 									</a>
 									<p
-										style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
+										style="color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
 										<a href="https://www.instagram.com/prowayspeechtherapy/?utm_source=ig_embed&amp;utm_campaign=loading"
-											style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px;"
-											target="_blank">Billy Strings</a> (@<a
+											style="color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px;"
+											target="_blank">prowayspeechtherapy</a> (@<a
 											href="https://www.instagram.com/prowayspeechtherapy/?utm_source=ig_embed&amp;utm_campaign=loading"
-											style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px;"
+											style="color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px;"
 											target="_blank">prowayspeechtherapy</a>) • Instagram photos and videos
 									</p>
 								</div>
@@ -344,17 +346,18 @@
 						</div>
 					</div>
 				</div>
-				<!-- Repeat this block for each card -->
 			</div>
-
-			<div class="row">
-				<div class="col-md-12 text-center read-more-container w3-button">
-					<a href="share.html">查看更多</a>
-				</div>
-			</div>
-			<!-- end for section -->
-			<div class="clearfix"> </div>
+			<!-- Repeat this block for each card -->
 		</div>
+
+		<div class="row">
+			<div class="col-md-12 text-center read-more-container w3-button">
+				<a href="share.html">查看更多</a>
+			</div>
+		</div>
+		<!-- end for section -->
+		<div class="clearfix"> </div>
+	</div>
 	</div>
 	<!-- //news -->
 
@@ -382,7 +385,7 @@
 				</div>
 
 				<div class="videos col-md-2 agile-footer-grid">
-					
+
 				</div>
 
 				<div class="clearfix"> </div>
