--- a/share.html
+++ b/share.html
@@ -131,118 +131,30 @@
 	<!-- gallery -->
 	<div class="gallery">
 		<div class="container">
-			<div class="gallery-grids">
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g1.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g1.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
+
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article01.html">
+							<img src="images/Article/article001.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">⾔語治療是甚麼? 我的孩⼦需要嗎?</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 7分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 32 </i>
+								<i class="fa fa-heart-o"> 11 </i>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g2.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g2.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g3.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g3.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g4.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g4.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g5.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g5.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g6.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g6.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g1.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g2.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g2.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g4.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g3.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g1.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
-				<script src="js/lightbox-plus-jquery.min.js"> </script>
 			</div>
+			
+			
 		</div>
 	</div>
 	<!-- //gallery -->
