--- a/article/article01.html
+++ b/article/article01.html
@@ -201,13 +201,8 @@
 					類等等的⽅法幫助孩⼦安全進食。<br><br>
 
 					<h3><b>總結</b></h3>
-					這篇⽂章簡介⾔語治療的範疇，並不包括所有⾔語治療師會處理的問題。同時，要知道每個
-					孩⼦的情況都獨⼀無⼆，如果你對孩⼦的發展有懷疑或擔⼼的地⽅，盡快帶孩⼦找⾔語治療
-					師作詳細評估吧！有需要幫忙的話，必定是愈早發現，愈早開始針對性跟進對孩⼦成長最
-					好。<br><br>
-
-					把這篇⽂章分享給身邊跟你同樣關⼼孩⼦成長的朋友，讓我們⼀起和孩⼦健康快樂地成長。
-					如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！<br><br>
+					這篇⽂章簡介⾔語治療的範疇，並不包括所有⾔語治療師會處理的問題。同時，要知道每個孩⼦的情況都獨⼀無⼆，如果你對孩⼦的發展有懷疑或擔⼼的地⽅，盡快帶孩⼦找⾔語治療師作詳細評估吧！有需要幫忙的話，必定是愈早發現，愈早開始針對性跟進對孩⼦成長最好。<br><br>
+					把這篇⽂章分享給身邊跟你同樣關⼼孩⼦成長的朋友，讓我們⼀起和孩⼦健康快樂地成長。 如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！<br><br>
 				</div>
 			</div>
 			<!-- //article -->
