--- a/article/article01.html
+++ b/article/article01.html
@@ -142,12 +142,9 @@
 				<div class="panel-body narrow-text">
 					言語治療這個專業在香港越來越多人認識，但仍然有很多人不知道言語治療師到底是做甚麼的。<br><br>
 					這個名稱聽起來讓人覺得言語治療師就是「教人講嘢」，然⽽事實當然不是這樣。<br><br>
-					言語治療師不是老師，也不是醫生，我們就是治療師，在香港的醫療體制下我們屬於專職醫
-					療。職業治療師、物理治療師、聽力學家等的專業也屬於專職醫療。<br><br>
-					言語治療師主要負責預防、評估、診斷和治療兒童及成人的語言障礙、社交溝通障礙、言語
-					障礙以及吞嚥障礙。<br><br>
-					今天我們將重點談論需要言語治療協助的孩子。簡單來說，如果你的孩子有以下四大類的需
-					要，言語治療師都能為你提供協助。<br><br>
+					言語治療師不是老師，也不是醫生，我們就是治療師，在香港的醫療體制下我們屬於專職醫療。職業治療師、物理治療師、聽力學家等的專業也屬於專職醫療。<br><br>
+					言語治療師主要負責預防、評估、診斷和治療兒童及成人的語言障礙、社交溝通障礙、言語障礙以及吞嚥障礙。<br><br>
+					今天我們將重點談論需要言語治療協助的孩子。簡單來說，如果你的孩子有以下四大類的需要，言語治療師都能為你提供協助。<br><br>
 
 					<h3><b>第一類：語言問題</b></h3>
 					語言能力可分為理解能力和表達能力兩大範疇。<br>
@@ -165,40 +162,27 @@
 					言語障礙可分為以下三類。<br><br>
 
 					<b><u>發音問題</u></b><br>
-					每個年齡層都有相應能掌握的語音，有些孩子語言能力沒有問題，但是因為先天或後天原因
-					導致發音不準確，影響說話清晰度。<br><br>
+					每個年齡層都有相應能掌握的語音，有些孩子語言能力沒有問題，但是因為先天或後天原因導致發音不準確，影響說話清晰度。<br><br>
 
 					<b><u>聲線問題</u></b><br>
-					即是嗓音出現問題，有些孩子說話時聲量過大或過小、音調過⾼或過低，或者因經常大叫導
-					致聲音沙啞。<br><br>
+					即是嗓音出現問題，有些孩子說話時聲量過大或過小、音調過⾼或過低，或者因經常大叫導致聲音沙啞。<br><br>
 
 					<b><u>說話流暢度問題</u></b><br>
-					這就是我們平時說的口吃、口窒窒、漏口。常見的臨床表現包括重複字詞，不適當地延長語
-					音或在句子中間停頓。<br><br>
+					這就是我們平時說的口吃、口窒窒、漏口。常見的臨床表現包括重複字詞，不適當地延長語音或在句子中間停頓。<br><br>
 
 					<h3><b>第三類：社交溝通問題</b></h3>
-					語言能力除了理解能力和表達能力，還有我們所說的「語用」，即是運用語言的能力。這就
-					關係到社交溝通層面。<br><br>
+					語言能力除了理解能力和表達能力，還有我們所說的「語用」，即是運用語言的能力。這就關係到社交溝通層面。<br><br>
 
-					簡單來說就是要懂得：說甚麼(what to say)、如何說(how to say it)、以及甚麼時候說(when to
-					say it)。如果孩子在這些層面出現困難，可能就有社交溝通障礙。<br><br>
-					有些孩子既懂得說話，發音亦準確，但他們總是不懂得在恰當的場合(when)，以適當的方式
-					(how)說合宜的內容(what)。<br><br>
-					例如媽媽說：「真係俾你激死！」小朗回應：「你都無死到。」這些情況不是把人氣死，就
-					是令人非常尷尬！要是小朗不是駁嘴的話，很可能他有語言障礙，是運用語言方面出了問
-					題，導致社交溝通障礙。<br><br>
-					說到這裡可能你也會想到自閉症的孩子，的⽽且確社交溝通是自閉症孩子會遇到明顯困難的
-					範疇，言語治療師會透過適當的社交技巧訓練協助孩子處理社交問題。<br><br>
+					簡單來說就是要懂得：說甚麼(what to say)、如何說(how to say it)、以及甚麼時候說(when to say it)。如果孩子在這些層面出現困難，可能就有社交溝通障礙。<br><br>
+					有些孩子既懂得說話，發音亦準確，但他們總是不懂得在恰當的場合(when)，以適當的方式(how)說合宜的內容(what)。<br><br>
+					例如媽媽說：「真係俾你激死！」小朗回應：「你都無死到。」這些情況不是把人氣死，就是令人非常尷尬！要是小朗不是駁嘴的話，很可能他有語言障礙，是運用語言方面出了問題，導致社交溝通障礙。<br><br>
+					說到這裡可能你也會想到自閉症的孩子，的⽽且確社交溝通是自閉症孩子會遇到明顯困難的範疇，言語治療師會透過適當的社交技巧訓練協助孩子處理社交問題。<br><br>
 
 					<h3><b>第四類：口肌及吞嚥問題</b></h3>
-					口肌即口部肌⾁，下巴、嘴唇及⾆頭都是其中重要組成部份，主要負責的功能除了說話，還
-					有進食。<br><br>
+					口肌即口部肌⾁，下巴、嘴唇及⾆頭都是其中重要組成部份，主要負責的功能除了說話，還有進食。<br><br>
 
-					吞嚥困難是指食物或飲料由口腔到咽喉、食道再到達胃部的過程中，因任何原因引起的障
-					礙。<br><br>
-					孩子未能順利進食的原因有很多，好像因先天疾病(例如：兔唇裂顎)引致的結構問題，又或
-					後天因素引起(例如：受⽗母等家庭成員的習慣影響)。言語治療師會透過吞嚥訓練及調節餐
-					類等等的方法幫助孩子安全進食。<br><br>
+					吞嚥困難是指食物或飲料由口腔到咽喉、食道再到達胃部的過程中，因任何原因引起的障礙。<br><br>
+					孩子未能順利進食的原因有很多，好像因先天疾病(例如：兔唇裂顎)引致的結構問題，又或後天因素引起(例如：受⽗母等家庭成員的習慣影響)。言語治療師會透過吞嚥訓練及調節餐類等等的方法幫助孩子安全進食。<br><br>
 
 					<h3><b>總結</b></h3>
 					這篇文章簡介言語治療的範疇，並不包括所有言語治療師會處理的問題。同時，要知道每個孩子的情況都獨一無二，如果你對孩子的發展有懷疑或擔心的地方，盡快帶孩子找言語治療師作詳細評估吧！有需要幫忙的話，必定是愈早發現，愈早開始針對性跟進對孩子成長最好。<br><br>
